--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"homepage": "https://sebmiet.github.io/toodo-list-react",
+	"homepage": "https://sebmiet.github.io/todo-list-react",
 	"name": "todo-list-react",
 	"version": "0.1.0",
 	"private": true,
